2009-02-05  John W. Eaton  <jwe@octave.org>

	* Array-util.cc (zero_dims_inquire): Eliminate unused variable MATCH.

	* Sparse.cc (assign (Sparse<LT>& lhs, const Sparse<RT>& rhs)):
	Eliminate unused variable N.

	* MArray-f.cc (MArray<float>::norm (float p) const,
	MArray<FloatComplex>::norm (float p) const): Pass P to xnorm.

	* eigs-base.cc (EigsRealNonSymmetricFunc, EigsRealSymmetricFunc)
	(EigsComplexNonSymmetricFunc): Avoid unused parameter warning.
	* idx-vector.cc (idx_vector::freeze): Likewise.

2009-02-04  Jaroslav Hajek  <highegg@gmail.com>

	* oct-locbuf.h: Specialize OCTAVE_LOCAL_BUFFER to use chunked
	allocation for pointers and const pointers.

2009-02-03  Benjamin Lindner  <lindnerben@gmx.net>
	
	* Makefile.in: Add missing library reference.

2009-02-03  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::sort (octave_idx_type, sortmode)):
	Copy array on-the-fly.
	(Array<T>::sort (Array<octave_idx_type> &, octave_idx_type, sortmode)):
	Copy array on-the-fly, use bare pointers rather than vec_index.

	* Array-d.cc (Array<double>::sort (octave_idx_type, sortmode)):
	Copy array on-the-fly.
	(Array<double>::sort (Array<octave_idx_type> &, octave_idx_type, sortmode)):
	Copy array on-the-fly, use bare pointers rather than vec_index.

	* Array-f.cc (Array<float>::sort (octave_idx_type, sortmode)):
	Copy array on-the-fly.
	(Array<float>::sort (Array<octave_idx_type> &, octave_idx_type, sortmode)):
	Copy array on-the-fly, use bare pointers rather than vec_index.

2009-02-02  Jaroslav Hajek  <highegg@gmail.com>

	* mx-inlines.cc (mx_inline_fabs_dup, mx_inline_cabs_dup): New funcs.

	* dMatrix.cc (real, imag, Matrix::abs): Simplify.
	* fMatrix.cc (real, imag, FloatMatrix::abs): Simplify.
	* CMatrix.cc (ComplexMatrix::abs, ComplexMatrix::conj): Simplify.
	* fCMatrix.cc (FloatComplexMatrix::abs, FloatComplexMatrix::conj): Simplify.

	* CMatrix.h, fCMatrix.h (conj): Add missing decl.

	* dNDArray.cc (real, imag, NDArray::abs): Simplify.